--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +16,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header {
@@ -19,6 +28,8 @@ header {
 header>h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header>p {
@@ -40,6 +51,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 4vw;
 }
 
 section.normal {
@@ -54,8 +67,9 @@ section.imagem {
 
 section.imagem>p {
     background-color: rgba(0, 0, 0, 0.26);
-    width: 400px;
+    display: inline-block;
     border-radius: 10px;
+    padding: 10px;
 }
 
 footer {
