--- a/testes/DeepSky/style.css
+++ b/testes/DeepSky/style.css
@@ -22,16 +22,21 @@
     --color-o200: #ff652b;
 }
 
+.back-img {
+    background: black url(images/da-belt-transp1.png) center top no-repeat;
+    background-size: contain;
+}
+
 body {
     background-image: linear-gradient(to bottom, black, #515151);
     height: 5000px;
-
 }
 
 header {
     color: white;
     height: 60px;
     background-color: rgba(91, 91, 91, 0.7);
+
 }
 
 main {
@@ -105,6 +110,10 @@ div.articles>h2 {
     text-decoration: underline;
 }
 
+.links:hover {
+    text-decoration: none;
+}
+
 div.post h2 {
     font-family: var(--font-roboto);
     font-size: 24px;
@@ -116,41 +125,4 @@ div.post p {
     font-family: var(--font-roboto);
     font-size: 18px;
     line-height: 24px;
-}
-
-.red {
-    width: 100%;
-    height: 500px;
-    background-color: red;
-    margin-top: 80px;
-
-
-
-
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.blue {
-    background-color: blue;
-    
-    width: 100px;
-    height: 60px;
-
-    border: 1px solid white;
-
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.green {
-    background-color: green;
-    width: 50px;
-    height: 30px;
 }
