--- a/execicios/ex026 (media-queries)/mq002/estilos/paisagem.css
+++ b/execicios/ex026 (media-queries)/mq002/estilos/paisagem.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Orientação paisagem (landscape) */
+
+body {
+    background: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
