--- a/execicios/ex026 (media-queries)/mq002/estilos/retrato.css
+++ b/execicios/ex026 (media-queries)/mq002/estilos/retrato.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Orientação retrato (portrait) */
+
+body {
+    background: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
