--- a/execicios/ex026 (media-queries)/mq005/estilos/style.css
+++ b/execicios/ex026 (media-queries)/mq005/estilos/style.css
@@ -6,6 +6,10 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 body, html {
     background-color: lightgray;
 }
